...
            <EditText
                android:id="@+id/WACCDetailedFreeCashFlowInputsBaseYearRevenueValue"
                android:layout_width="89dp"
                android:layout_height="44dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="44dp"
                android:text="0.00"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsNumberForecastPeriodsValue" />

                <TextView
                    android:id="@+id/WACCDetailedFreeCashFlowInputsAnnualRevenueGrowthRate"
                    android:layout_width="134dp"
...
                    android:layout_width="121dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="64dp"
                    android:text="TextView"
                    app:layout_constraintEnd_toStartOf="@+id/WACCDetailedFreeCashFlowInputsInitialEBITValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/WACCDetailedFreeCashFlowInputsSGA" />

            <TextView
                android:id="@+id/WACCDetailedFreeCashFlowInputsLastPeriodEBIT"
                android:layout_width="121dp"
...
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
...
